# SmartVision

./: .gitignore  CMakeLists.txt  README.md  build_and_run.sh  contour.py  contour_cam.py  demo.py  demo1.py  run.sh  send.py  shrimp_data.json
Inc/: main.h
Src/: main_process.c
esp_command/: control_command.c  control_command.h
