cmake_minimum_required(VERSION 3.10)
project(DCS_Test C)

set(CMAKE_C_STANDARD 99)
set(CMAKE_C_STANDARD_REQUIRED ON)

find_package(PkgConfig REQUIRED)
pkg_check_modules(GPIOD REQUIRED libgpiod)

message(STATUS "GPIOD include dirs: ${GPIOD_INCLUDE_DIRS}")
message(STATUS "GPIOD library dirs: ${GPIOD_LIBRARY_DIRS}")
message(STATUS "GPIOD libraries: ${GPIOD_LIBRARIES}")

pkg_check_modules(NCURSES REQUIRED ncurses)

message(STATUS "NCURSES include dirs: ${NCURSES_INCLUDE_DIRS}")
message(STATUS "NCURSES library dirs: ${NCURSES_LIBRARY_DIRS}")
message(STATUS "NCURSES libraries: ${NCURSES_LIBRARIES}")

# Include directories
set(INCLUDE_DIRS
    esp_command
    Inc
)

# Source files process 1
set(SOURCES_3
    Src/main_process.c
    esp_command/control_command.c)

# Add executable 3
add_executable(main_app ${SOURCES_3})

# Include directories for main_app
target_include_directories(main_app PRIVATE ${INCLUDE_DIRS})

target_link_libraries(main_app ${GPIOD_LIBRARIES} ${NCURSES_LIBRARIES})
